infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ratu
  labels:
    name: ratu
    environment: production
